general structural improvements

--- a/examples/deepkit-di/tsconfig.json
+++ b/examples/deepkit-di/tsconfig.json
@@ -5,7 +5,7 @@
       "target": "ESNext",
       "moduleResolution": "node",
       "experimentalDecorators": true,
-      "outDir": "tmp"
+      "outDir": "dist"
     },
     "reflection": true,
     "files": ["src/index.ts"]
