--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
     "deepkit-type-install": "deepkit-type-install"
   },
   "author": "Pascal Garber <pascal@artandcode.studio>",
