--- a/examples/deepkit-di/package.json
+++ b/examples/deepkit-di/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gjsify/example-basic",
+  "name": "@gjsify/example-deepkit-di",
   "private": true,
   "version": "0.0.1",
   "description": "",
@@ -7,10 +7,7 @@
   "type": "module",
   "scripts": {
     "start": "gjs -m dist/index.js",
-    "build": "npm run build:ts && npm run build:js",
-    "build:ts": "tsc",
-    "build:js": "node esbuild.js",
-    "deepkit-type-install": "deepkit-type-install"
+    "build": "node esbuild.js"
   },
   "engines": {
     "node": "16",
@@ -26,6 +23,7 @@
     "@gjsify/globals": "workspace:^",
     "@gjsify/os": "workspace:^",
     "@gjsify/process": "workspace:^",
+    "@gjsify/tty": "workspace:^",
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
@@ -38,12 +36,12 @@
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^1.3.0",
-    "tty-browserify": "^0.0.1",
     "url": "^0.11.0",
     "util": "^0.12.4"
   },
   "devDependencies": {
     "@deepkit/type-compiler": "^1.0.1-alpha.72",
+    "@gjsify/esbuild-deepkit-plugin": "workspace:^",
     "@types/node": "^18.0.3",
     "esbuild": "^0.14.48",
     "esbuild-plugin-alias": "^0.2.1",
