--- a/packages/node/process/package.json
+++ b/packages/node/process/package.json
@@ -18,8 +18,7 @@
     "@gjsify/utils": "workspace:^"
   },
   "devDependencies": {
-    "@types/jasmine": "^4.0.3",
-    "jasmine": "^4.3.0",
+    "@types/node": "^18.6.2",
     "typescript": "^4.7.4"
   }
 }
