--- a/packages/node/tty/package.json
+++ b/packages/node/tty/package.json
@@ -4,6 +4,7 @@
     "description": "tty core module for gjsify",
     "type": "module",
     "main": "lib/index.js",
+    "module": "lib/index.js",
     "scripts": {
         "build": "tsc"
     },
@@ -13,6 +14,10 @@
         "tty"
     ],
     "devDependencies": {
+        "@types/node": "^18.6.2",
         "typescript": "^4.7.4"
+    },
+    "dependencies": {
+        "@gjsify/utils": "workspace:^"
     }
 }
