Add global build script

--- a/packages/node/process/tsconfig.json
+++ b/packages/node/process/tsconfig.json
@@ -5,8 +5,10 @@
       "target": "ESNext",
       "moduleResolution": "node",
       "experimentalDecorators": true,
-      "outDir": "lib"
+      "outDir": "lib",
+      "rootDir": "src",
+      "composite": true
     },
     "reflection": true,
-    "files": ["src/index.ts"]
+    "files": ["src/index.ts", "src/hrtime.ts"]
 }
