--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn workspaces foreach -pt run build"
+    "build": "yarn run build:esbuild; yarn run build:unit; yarn run build:node",
+    "build:esbuild": "yarn workspace @gjsify/esbuild-plugin-deepkit run build; yarn workspace @gjsify/esbuild-plugin-gjsify run build",
+    "build:node": "yarn workspace @gjsify/unit run build",
+    "build:unit": "yarn workspace @gjsify/process run build; yarn workspace @gjsify/tty run build"
   },
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
   "devDependencies": {
-    "@deepkit/type-compiler": "^1.0.1-alpha.74",
     "typescript": "^4.7.4"
   },
   "packageManager": "yarn@3.2.1",
