--- a/packages/node/fs/tsconfig.json
+++ b/packages/node/fs/tsconfig.json
@@ -9,6 +9,10 @@
       "rootDir": "src",
       "composite": true
     },
+    "skipLibCheck": true,
+    "allowJs": true,
+    "checkJs": false,
     "reflection": false,
-    "include": ["src/**/*"],
+    "include": ["src/**/*.ts"],
+    "exclude": ["src/test.ts", "src/**/*.spec.ts"]
 }
