--- a/packages/esbuild-plugin-gjsify/package.json
+++ b/packages/esbuild-plugin-gjsify/package.json
@@ -35,10 +35,10 @@
         "esbuild-plugin-alias": "^0.2.1",
         "events": "^3.3.0",
         "path-browserify": "^1.0.1",
+        "punycode": "^2.1.1",
         "querystring-es3": "^0.2.1",
         "stream-browserify": "^3.0.0",
         "string_decoder": "^1.3.0",
-        "url": "^0.11.0",
         "util": "^0.12.4"
     },
     "devDependencies": {
