--- a/packages/node/globals/package.json
+++ b/packages/node/globals/package.json
@@ -22,6 +22,7 @@
     "@gjsify/utils": "workspace:^"
   },
   "devDependencies": {
-    "@gjsify/unit": "workspace:^"
+    "@gjsify/unit": "workspace:^",
+    "cowsay": "^1.5.0"
   }
 }
