--- a/packages/esbuild-plugin-gjsify/package.json
+++ b/packages/esbuild-plugin-gjsify/package.json
@@ -24,12 +24,13 @@
         "@gjsify/globals": "workspace:^",
         "@gjsify/os": "workspace:^",
         "@gjsify/process": "workspace:^",
+        "@gjsify/require": "workspace:^",
         "@gjsify/tty": "workspace:^",
         "assert": "^2.0.0",
         "browserify-zlib": "^0.2.0",
         "buffer": "^6.0.3",
         "constants-browserify": "^1.0.0",
-        "core-js": "^3.24.1",
+        "core-js": "^3.25.0",
         "crypto-browserify": "^3.12.0",
         "domain-browser": "^4.22.0",
         "esbuild-plugin-alias": "^0.2.1",
@@ -39,10 +40,11 @@
         "querystring-es3": "^0.2.1",
         "stream-browserify": "^3.0.0",
         "string_decoder": "^1.3.0",
-        "util": "^0.12.4"
+        "util": "^0.12.4",
+        "web-streams-polyfill": "^3.2.1"
     },
     "devDependencies": {
-        "esbuild": "^0.14.51",
+        "esbuild": "^0.15.5",
         "typescript": "^4.7.4"
     }
 }
