chore(fs): Use types from @types/node instead of copy them

--- a/packages/node/fs/package.json
+++ b/packages/node/fs/package.json
@@ -4,7 +4,8 @@
     "description": "fs core module for gjsify",
     "main": "lib/index.mjs",
     "module": "lib/index.mjs",
-    "type": "module",    "scripts": {
+    "type": "module",
+    "scripts": {
         "build": "node --experimental-import-meta-resolve esbuild.mjs",
         "test": "yarn run build && yarn run test:node && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js",
@@ -17,6 +18,7 @@
     ],
     "devDependencies": {
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
-        "@gjsify/unit": "workspace:^"
+        "@gjsify/unit": "workspace:^",
+        "@types/node": "^18.7.13"
     }
 }
