--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.2"
   },
   "packageManager": "yarn@3.2.1",
   "resolutions": {
@@ -33,6 +33,7 @@
   "workspaces": [
     "packages/*",
     "packages/node/*",
+    "packages/web/*",
     "examples/*"
   ]
 }
