--- a/packages/esbuild-plugin-gjsify/package.json
+++ b/packages/esbuild-plugin-gjsify/package.json
@@ -26,8 +26,8 @@
         "@gjsify/process": "workspace:^",
         "@gjsify/require": "workspace:^",
         "@gjsify/tty": "workspace:^",
+        "@gjsify/zlib": "workspace:^",
         "assert": "^2.0.0",
-        "browserify-zlib": "^0.2.0",
         "buffer": "^6.0.3",
         "constants-browserify": "^1.0.0",
         "core-js": "^3.25.0",
@@ -45,6 +45,6 @@
     },
     "devDependencies": {
         "esbuild": "^0.15.5",
-        "typescript": "^4.7.4"
+        "typescript": "^4.8.2"
     }
 }
