--- a/packages/node/stream/package.json
+++ b/packages/node/stream/package.json
@@ -20,10 +20,10 @@
     "devDependencies": {
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.7.13",
-        "esinstall": "^1.1.7"
+        "@types/node": "^18.7.14"
     },
     "dependencies": {
-        "vite-compatible-readable-stream": "^3.6.1"
+        "inherits": "^2.0.4",
+        "readable-stream": "^4.1.0"
     }
 }
