--- a/packages/web/fetch/package.json
+++ b/packages/web/fetch/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@gjsify/fetch",
     "version": "0.0.1",
-    "description": "fetch module for gjsify",
+    "description": "web fetch module for gjsify",
     "main": "lib/index.mjs",
     "module": "lib/index.mjs",
     "type": "module",
@@ -20,7 +20,7 @@
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
         "@gjsify/http": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.7.13"
+        "@types/node": "^18.7.14"
     },
     "dependencies": {
         "data-uri-to-buffer": "^4.0.0",
