--- a/packages/node/globals/package.json
+++ b/packages/node/globals/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gjsify/globals",
   "version": "0.0.1",
-  "description": "globals core module for gjs",
+  "description": "Node globals module for gjs",
   "keywords": [
     "gjs",
     "node",
