--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:unit": "yarn workspace @gjsify/unit run build",
     "build:node": "yarn workspace @gjsify/process run build; yarn workspace @gjsify/tty run build; yarn workspace @gjsify/url run build; yarn workspace @gjsify/fs run build; yarn workspace @gjsify/os run build; yarn workspace @gjsify/globals run build",
     "build:types": "yarn workspace @gjsify/types run build",
-    "build:utils": "yarn workspace @gjsify/utils run build"
+    "build:utils": "yarn workspace @gjsify/utils run build",
+    "build:all": "yarn workspaces foreach run build"
   },
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
