--- a/packages/deno/deno_std/tsconfig.json
+++ b/packages/deno/deno_std/tsconfig.json
@@ -1,17 +1,40 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "types": ["node"],
-    "target": "ESNext",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
+
+    // Custom
+
+    "skipDefaultLibCheck": true,
     "outDir": "lib",
-    "rootDir": "original",
-    "composite": true
+    "rootDir": ".tmp",
+    "composite": true,
+    "typeRoots": [],
+    "declaration": true,
+    "noEmit": false,
+    "lib": [],
+    "strict": false,
+    "noImplicitAny": false,
+    "moduleResolution": "node",
+    "isolatedModules": false,
+
+    // https://github.com/denoland/deno/blob/578f12d531b146661294771f002cf0d76bcc5f9a/cli/tsc.rs#L764
+    // https://github.com/denoland/deno/blob/924aa31fa85689b619147d906d800e3ebad4e52e/cli/lsp/language_server.rs#L645
+    "allowJs": true,
+    "experimentalDecorators": true,
+    // "isolatedModules": true,
+    "checkJs": false,
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": false,
+    "incremental": true,
+    "jsx": "react",
+    "jsxFactory": "React.createElement",
+    "jsxFragmentFactory": "React.Fragment",
+    // "lib": ["deno.ns", "deno.window"],
+    "module": "esnext",
+    "moduleDetection": "force",
+    // "noEmit": true,
+    // "strict": true,
+    "target": "esnext",
+    "skipLibCheck": true,
   },
-  "skipLibCheck": true,
-  "allowJs": true,
-  "checkJs": false,
-  "reflection": false,
-  "include": ["original/**/*.ts"],
+  "include": [".tmp/**/*.ts", ".tmp/**/*.mts", ".tmp/**/*.js", ".tmp/**/*.mjs", "deno/cli/dts/*.d.ts"],
 }
