--- a/packages/esbuild-plugin-gjsify/package.json
+++ b/packages/esbuild-plugin-gjsify/package.json
@@ -28,12 +28,10 @@
         "@gjsify/require": "workspace:^",
         "@gjsify/tty": "workspace:^",
         "@gjsify/zlib": "workspace:^",
-        "assert": "^2.0.0",
         "buffer": "^6.0.3",
-        "constants-browserify": "^1.0.0",
         "core-js": "^3.25.0",
         "crypto-browserify": "^3.12.0",
-        "domain-browser": "^4.22.0",
+        "deepmerge": "^4.2.2",
         "esbuild-plugin-alias": "^0.2.1",
         "path-browserify": "^1.0.1",
         "punycode": "^2.1.1",
