chore(deno): Add more globals

--- a/packages/deno/deno_std/package.json
+++ b/packages/deno/deno_std/package.json
@@ -14,6 +14,13 @@
         "test:gjs": "gjs -m test.gjs.js",
         "test:node": "node test.node.js"
     },
+    "exports": {
+        "./*": {
+            "import": "./lib/*.js",
+            "default": "./lib/*.js",
+            "types": "./lib/*.d.ts"
+        }
+    },
     "keywords": [
         "gjs",
         "node",
