--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jsdom": "^20.0.0",
     "typescript": "^4.8.2"
   },
   "packageManager": "yarn@3.2.1",
