--- a/packages/esbuild-plugin-gjsify/package.json
+++ b/packages/esbuild-plugin-gjsify/package.json
@@ -31,7 +31,6 @@
         "buffer": "^6.0.3",
         "core-js": "^3.25.0",
         "crypto-browserify": "^3.12.0",
-        "deepmerge": "^4.2.2",
         "esbuild-plugin-alias": "^0.2.1",
         "path-browserify": "^1.0.1",
         "punycode": "^2.1.1",
@@ -41,7 +40,9 @@
         "web-streams-polyfill": "^3.2.1"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.184",
         "esbuild": "^0.15.6",
+        "lodash": "^4.17.21",
         "typescript": "^4.8.2"
     }
 }
