--- a/packages/deno/deno_std/package.json
+++ b/packages/deno/deno_std/package.json
@@ -2,14 +2,14 @@
     "name": "@gjsify/deno_std",
     "version": "0.0.1",
     "description": "Deno deno_std module for gjsify",
-    "main": "lib/node/global.js",
-    "module": "lib/node/global.mjs",
+    "main": "lib/node/global.ts",
+    "module": "lib/node/global.ts",
     "type": "module",
     "scripts": {
         "clear": "rm -rf .tmp lib dest tsconfig.tsbuildinfo",
         "build": "yarn run clear && yarn run transform && yarn run build:tsc",
+        "transform": "node ./build.mjs",
         "build:tsc": "tsc",
-        "transform": "node ./transform.mjs",
         "test": "yarn run build && yarn run test:node && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js",
         "test:node": "node test.node.js"
@@ -17,8 +17,15 @@
     "exports": {
         "./*": {
             "import": "./lib/*.js",
-            "default": "./lib/*.js",
-            "types": "./lib/*.d.ts"
+            "default": "./lib/*.js"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            "*": [
+                "./lib/*.d.ts",
+                "./lib/*.d.mts"
+            ]
         }
     },
     "keywords": [
@@ -31,7 +38,7 @@
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "cpy": "^9.0.1",
-        "typescript": "^4.6.2"
+        "typescript": "^4.8.2"
     },
     "dependencies": {
         "ts-morph": "^15.1.0"
