--- a/packages/node/util/tsconfig.json
+++ b/packages/node/util/tsconfig.json
@@ -3,7 +3,7 @@
       "module": "ESNext",
       "types": ["node"],
       "target": "ESNext",
-      "moduleResolution": "node",
+      "moduleResolution": "Node",
       "experimentalDecorators": true,
       "outDir": "lib",
       "rootDir": "src",
