--- a/packages/esbuild-plugin-gjsify/package.json
+++ b/packages/esbuild-plugin-gjsify/package.json
@@ -26,9 +26,9 @@
         "@gjsify/os": "workspace:^",
         "@gjsify/process": "workspace:^",
         "@gjsify/require": "workspace:^",
+        "@gjsify/resolve-npm": "workspace:^",
         "@gjsify/tty": "workspace:^",
         "@gjsify/zlib": "workspace:^",
-        "buffer": "^6.0.3",
         "core-js": "^3.25.0",
         "crypto-browserify": "^3.12.0",
         "esbuild-plugin-alias": "^0.2.1",
