--- a/packages/node/buffer/tsconfig.json
+++ b/packages/node/buffer/tsconfig.json
@@ -3,12 +3,11 @@
       "module": "ESNext",
       "types": ["node"],
       "target": "ESNext",
-      "moduleResolution": "Node",
+      "moduleResolution": "node",
       "experimentalDecorators": true,
       "outDir": "lib",
       "rootDir": "src",
-      "composite": true,
-      "allowSyntheticDefaultImports": true,
+      "composite": true
     },
     "skipLibCheck": true,
     "allowJs": true,
