--- a/packages/node/util/package.json
+++ b/packages/node/util/package.json
@@ -19,9 +19,14 @@
     "devDependencies": {
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
         "@gjsify/unit": "workspace:^",
+        "@types/inherits": "^0.0.30",
         "@types/node": "^18.7.14"
     },
     "dependencies": {
-        "@gjsify/deno_std": "workspace:^"
+        "is-arguments": "^1.1.1",
+        "is-generator-function": "^1.0.10",
+        "is-typed-array": "^1.1.9",
+        "util": "^0.12.4",
+        "which-typed-array": "^1.1.8"
     }
 }
