--- a/packages/node/querystring/package.json
+++ b/packages/node/querystring/package.json
@@ -1,14 +1,12 @@
 {
-    "name": "@gjsify/buffer",
+    "name": "@gjsify/querystring",
     "version": "0.0.1",
-    "description": "Node buffer module for gjsify",
+    "description": "Node querystring module for gjsify",
     "main": "lib/index.cjs",
     "module": "lib/index.mjs",
     "type": "module",
     "scripts": {
-        "build": "yarn run bundle:deno-buffer && yarn run build:esbuild",
-        "build:esbuild": "node --experimental-import-meta-resolve esbuild.mjs",
-        "bundle:deno-buffer": "rm src/buffer.deno.js && deno bundle https://deno.land/std/node/buffer.ts src/buffer.deno.js",
+        "build": "node --experimental-import-meta-resolve esbuild.mjs",
         "test": "yarn run build && yarn run test:node && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js",
         "test:node": "node test.node.js"
@@ -21,6 +19,14 @@
     "devDependencies": {
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
         "@gjsify/unit": "workspace:^",
+        "@types/inherits": "^0.0.30",
         "@types/node": "^18.7.14"
+    },
+    "dependencies": {
+        "is-arguments": "^1.1.1",
+        "is-generator-function": "^1.0.10",
+        "is-typed-array": "^1.1.9",
+        "util": "^0.12.4",
+        "which-typed-array": "^1.1.8"
     }
 }
