chore(cli): Replaces esbuild.mjs to CLI in more modules

--- a/packages/node/buffer/package.json
+++ b/packages/node/buffer/package.json
@@ -1,15 +1,16 @@
 {
     "name": "@gjsify/buffer",
     "version": "0.0.1",
-    "description": "Node buffer module for gjsify",
+    "description": "Node.js buffer module for Gjs",
     "main": "lib/index.cjs",
     "module": "lib/index.mjs",
     "type": "module",
     "scripts": {
-        "build": "yarn run bundle:deno && yarn run build:esbuild",
-        "build:esbuild": "node --experimental-import-meta-resolve esbuild.mjs",
-        "bundle:deno": "rm -f src/buffer.deno.js && deno bundle https://deno.land/std/node/buffer.ts src/buffer.deno.js",
-        "test": "yarn run build && yarn run test:node && yarn run test:gjs",
+        "build": "gjsify build --library src/index.ts",
+        "build:test": "yarn run build:test:gjs && yarn run build:test:node",
+        "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
+        "build:test:node": "gjsify build src/test.ts --platform node --outfile test.node.js",
+        "test": "yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js",
         "test:node": "node test.node.js"
     },
@@ -19,7 +20,7 @@
         "fs"
     ],
     "devDependencies": {
-        "@gjsify/esbuild-plugin-gjsify": "workspace:^",
+        "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.7.15"
     }
