--- a/packages/node/stream/package.json
+++ b/packages/node/stream/package.json
@@ -2,13 +2,15 @@
     "name": "@gjsify/stream",
     "version": "0.0.1",
     "description": "node stream module for gjsify",
-    "main": "lib/index.mjs",
+    "main": "lib/index.cjs",
     "module": "lib/index.mjs",
     "type": "module",
     "scripts": {
-        "build": "node --experimental-import-meta-resolve esbuild.mjs",
-        "build:esm": "node to-esm.js",
-        "test": "yarn run build && yarn run test:node && yarn run test:gjs",
+        "build": "gjsify build --library src/index.ts",
+        "build:test": "yarn run build:test:gjs && yarn run build:test:node",
+        "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
+        "build:test:node": "gjsify build src/test.ts --platform node --outfile test.node.js",
+        "test": "yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js",
         "test:node": "node test.node.js"
     },
@@ -18,7 +20,7 @@
         "fs"
     ],
     "devDependencies": {
-        "@gjsify/esbuild-plugin-gjsify": "workspace:^",
+        "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.7.15"
     },
