--- a/packages/node/util/package.json
+++ b/packages/node/util/package.json
@@ -1,23 +1,26 @@
 {
     "name": "@gjsify/util",
     "version": "0.0.1",
-    "description": "Node util module for gjsify",
-    "main": "lib/index.mjs",
+    "description": "Node.js util module for Gjs",
+    "main": "lib/index.cjs",
     "module": "lib/index.mjs",
     "type": "module",
     "scripts": {
-        "build": "node --experimental-import-meta-resolve esbuild.mjs",
-        "test": "yarn run build && yarn run test:node && yarn run test:gjs",
+        "build": "gjsify build --library src/index.ts",
+        "build:test": "yarn run build:test:gjs && yarn run build:test:node",
+        "build:test:gjs": "gjsify build src/test.ts --platform gjs --outfile test.gjs.js",
+        "build:test:node": "gjsify build src/test.ts --platform node --outfile test.node.js",
+        "test": "yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.js",
         "test:node": "node test.node.js"
     },
     "keywords": [
         "gjs",
         "node",
-        "fs"
+        "util"
     ],
     "devDependencies": {
-        "@gjsify/esbuild-plugin-gjsify": "workspace:^",
+        "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/inherits": "^0.0.30",
         "@types/node": "^18.7.15"
